--- a/src/index.html
+++ b/src/index.html
@@ -6,9 +6,9 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-  <title>App</title>
+  <title>Elvia</title>
 
-  <link href="css/app.css" rel="stylesheet"/>
+  <link href="sass/app.css" rel="stylesheet"/>
 
   <script type="text/javascript" src="app.js" defer></script>
 
